Fix error page layout Fix PerfectScrollBar css

--- a/client/core.scss
+++ b/client/core.scss
@@ -288,10 +288,10 @@ html {
     /*
      * OVERRIDE perfect scrollbar
      */
-    .ps__rail-x:hover, .ps__rail-y:hover, .ps__rail-x:focus, .ps__rail-y:focus {
-      background-color: $bg-darken;
-      opacity: 1;
-      border-radius: 15px;
+    .ps__rail-x:hover, .ps__rail-y:hover, .ps__rail-x:focus, .ps__rail-y:focus, .ps__rail-x.ps--clicking, .ps__rail-y.ps--clicking {
+      background-color: $bg-darken !important;
+      opacity: 1 !important;
+      border-radius: 15px !important;
     }
   }
 }
